Thu Dec  2  6:07:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSImage.m: Use opacity values from image reps to cache more
	intelligently, and set the opacity of caches correctly.

Thu Dec  2 01:28:34 1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/AppKit/NSTableHeaderView.h: Added copyright.
	* Source/NSTableHeaderView.m: Untested first attempt at drawing
 	code; it should work enough to make developing of NSTableView
 	possible.  Mouse events to be implemented after NSTableView works.
	* Headers/AppKit/NSTableColumn.h: Added copyright, updates.
	* Source/NSTableColumn.m: Rewritten nearly everything, class now 
 	finished, but not tested.

Wed Dec  1 14:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSColor.m: Fixed a few transparency bugs in system colors.
	* Source/NSImage.m: Caching rewrite - using NSCachedImageRep - works
	with xgps, but probably not xdps.  There are two global variables to
	control this -
	1. NSImageDoesCaching
	To turn caching on - when an image is drawn it is cached, if it is
	redrawn with the same background color set (excluding transparent)
	then the cached version is used.
	2. NSImageForceCaching
	To force the cache to be used irrespective of the background color.

Wed Dec  1 11:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: Removed spurious setNeedsDisplay when changing
	the contentView of a window - it's up to the programmer to do that.
	* Source/NSView.m: Removed many spurious setNeedsDisplay calls when
	altering the view hierarchy - it's up to the programmer to do a
	single call at the end of the work.

Wed Dec  1  8:27:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Applied and modified/rewrote patch by Jonathan Gapen
	* Headers/gnustep/gui/NSImage.h: Moved excess BOOL ivar to _flags.
	* Headers/NSView.h: Added -enclosingScrollView method and NSScrollView
	class reference.